# NameNet

./: .gitignore  README.md  pyproject.toml
notebooks/: name_net.ipynb  sandbox.ipynb
src/net/: Tensor.py  __init__.py  mlp.py  train.py  util.py
src/net/model/: __init__.py  mlp.py
src/net/nlp/: __init__.py  char_embedder.py  char_tokenizer.py
src/net/parser/: __init__.py  txt_parser.py
tests/: test_backprop.py  test_binary.py  test_descent.py  test_emb.py  test_emb_train.py
writeups/: backprop.tex  universal.tex
