[project]
name = "net"
version = "0.1.0"
description = "Character-level name generator using a neural MLP"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
